--- a/README
+++ b/README
@@ -1,3 +1,1 @@
-This project provides associated computer code for the manuscript:
-
-NR Garud*, BH Good*, O Hallatschek, and KS Pollard. Evolutionary dynamics of bacteria in the gut microbiome within and across hosts. PLoS Biol 17(1): e3000102 (2019).
+Manuscript in prep
