--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Manuscript in prep
+This project provides associated computer code for the preprint:
+
+Z Liu, BH Good. Dynamics of bacterial recombination in the human gut microbiome.
+
+https://www.biorxiv.org/content/10.1101/2022.08.24.505183v1
