--- a/README
+++ b/README
@@ -1,5 +1,8 @@
-This project provides associated computer code for the preprint:
+This project provides associated computer code for the manuscript:
 
-Z Liu, BH Good. Dynamics of bacterial recombination in the human gut microbiome.
+Liu Z, Good BH. Dynamics of bacterial recombination in the human gut microbiome.
+PLoS Biol. 2024 Feb 8;22(2):e3002472. doi: 10.1371/journal.pbio.3002472. PMID: 38329938; PMCID: PMC10852326.
 
-https://www.biorxiv.org/content/10.1101/2022.08.24.505183v1
+https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002472
+
+More documentation to come! Please to email me (zhiru at stanford.edu) in the mean time for any quetions.
